fix checkstyle and method in Literal